src/main.css
/* ... */
/* distinguish table header cells, definition term, and var by increasing
 * font-weight to 600
 * if 600 isn't available, 700 should be chosen by the browser automatically */
:not(pre, code, samp) > table th,
kbd, /* <kbd>'s font size is reduced later, compensate by increasing weight */
dfn,
dt,
var {
  font-weight: 600;
}

h1 {
  font-size: var(--h1-size);
  margin-top: var(--h1-margin);
  margin-bottom: var(--h1-margin);
}

h2 {
  font-size: var(--h2-size);
}

h3 {
  font-size: var(--h3-size);
}

h4 {
  font-size: var(--h4-size);
}

h5 {
  font-size: var(--h5-size);
}

h6 {
  font-size: var(--h6-size);
}

/* code, kbd, pre, samp, and var should be monospace
 * address and time have been made monospace as well to eliminate chances of
 * making mistakes when dealing with ambiguous characters like 0, O, 1, l, I */
address,
code,
kbd,
pre,
samp,
time,
var {
  font-family: var(--mono-font);
}

/* avoid using italic monospace fonts because most italic monospace fonts are
 * usually not truly italic, they're just slanted and often don't work well */
address,
dfn,
var {
  font-style: normal;
}

/* the top padding has been deliberately omitted otherwise the margin of
 * <blockquote> and its child element, most likely <p>, add up to make
 * <blockquote> look weird */
blockquote {
  border-left: 0.25rem solid var(--fg-border);
  margin-left: 0;
  margin-right: 0;
  padding: 0 1rem;
}

figure {
  margin-left: 0;
  margin-right: 0;
}

figcaption {
  text-align: center;
}

/* this rule can be improved using :has() */
:where(blockquote, p, span) + figcaption {
  text-align: initial;
}

/* compared to firefox, chromium's implementation of <hr> in light mode seems
 * broken; the line is a bit too thin */
hr {
  color: var(--fg-border);
}

/* according to MDN, hyperlinks should be styled in the LVHA order where
 * L - :link
 * V - :visited
 * H - :hover
 * A - :active */
a:link {
  /* stylelint-disable declaration-block-no-redundant-longhand-properties */
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-decoration-thickness: 1px;
  /* stylelint-enable declaration-block-no-redundant-longhand-properties */
}

/* superscripts and subscripts shouldn't affect line-height in paragraphs */
sub,
sup {
  line-height: 0;
}

/* <dt> should include a top margin to provide even spaces for <dd> when <dd>
 * has <p> as child element */
dt {
  margin: 1rem 0;
}

/* if <dt> has a hyperlink, we need padding to meet Google a11y requirements of
 * 48px tap targets
 * we'll remove margin to mitigate the unintended effect of adding padding and
 * margin to <dt> */
dt > a:any-link {
  display: inline-block;
  padding: 0.75rem 0;
  margin: -0.75rem 0;
}

/* consecutive <dt>'s shouldn't have padding for hyperlinks overlapping */
dt + dt > a:any-link {
  padding-top: 0;
}

dd {
  margin-left: var(--first-level-space);
}

kbd {
  /* reduce font-size and remove block padding to prevent box-shadow clashing
   * with other inline elements */
  font-size: 90%;
  padding-top: 0;
  padding-bottom: 0;
}

/* italicize <del> and <ins> to distinguish them
 * inline quotes look better when italicized */
del,
ins,
q {
  font-style: italic;
}

/* --------------------------------- TABLES --------------------------------- */

table {
  border-collapse: collapse;
}

/* style tables provided they're not being used for syntax highlighting inside
 * a preformatted code block
 * it's not practical to account for all possible variations of tables inside
 * <pre> because some static site generator apparently inject useless <div>'s
 * inside or outside <pre> */
:not(pre, code, samp) > table {
  /* prevent tables from overflowing
   * the alternative is to set the width to 100% irrespective of the actual
   * width and set table-layout to fixed */
  display: block;

  /* add browser default margins to play safe */
  margin-bottom: 1em;
  margin-top: 1em;
  max-width: 100%;
  padding: 0.5rem;
  overflow-x: auto;
}

/* as of version 103, chromium messes up border width if font size or display
 * has been scaled, firefox v101 and webkit epiphany works fine */
:not(pre, code, samp) > table :where(td, th) {
  border: 1px solid var(--fg-border);
  padding: 0.25rem 0.5rem;
}

/* don't wrap text when tables overflow */
:not(pre, code, samp) > table tbody {
  white-space: nowrap;
}

:not(pre, code, samp) > table thead {
  border-bottom: 3px solid var(--fg-border);
}

:not(pre, code, samp) > table tfoot {
  border-top: 3px solid var(--fg-border);
}

:not(pre, code, samp) > table[role="grid"] tbody tr:nth-child(odd) {
  background-color: var(--bg-link-a);
  color: var(--fg-table-grid);
}

/* ------------------------------- ACCORDION -------------------------------- */

/* add a border around <details> when it's closed */
details {
  border-radius: 0.25rem;
  border: 1px solid var(--fg-border);
}

summary {
  padding: 0.75rem 0.5rem;
}

/* when <details> is open, add a block border to <summary> */
details[open] > summary {
  border-bottom: 1px solid var(--fg-border);
}

/* according to whatwg HTML spec, <details> can contain "flow content"
 * elements which includes many inline elements like <a> and <em>.
 * we'll account for a few commonly used block elements without an inherent
 * inline padding or margin and add inline padding to them */
details[open] > :where(article, aside, div, figure, footer, header, nav, p, section) {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

/* ------------------------------- MULTIMEDIA ------------------------------- */

img,
picture {
  display: block;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
}
/* ... */

